--- a/Introduction and Variables descrption table in 3. Data section.Rmd
+++ b/Introduction and Variables descrption table in 3. Data section.Rmd
@@ -9,7 +9,8 @@ library(class)
 # Introduction
 The analysis of Indoor Positioning Systems is a burgeoning field that necessitates the capability to forecast the location of objects within a building. With the continual expansion of the Internet of Things, research on predicting the location in indoor positioning systems has gained increasing relevance. Statistical methods are employed to monitor individuals and items within diverse settings such as retail stores, healthcare facilities, and warehouses, utilizing indoor positioning systems to comprehend various behaviors and provide valuable insights to IPS data users. Traditional Global Positioning Systems lack reliability within buildings, but the proliferation of Wireless Fidelity allows the utilization of Wi-Fi signals to construct indoor positioning systems that deliver nearly real-time information about the whereabouts of people or objects. The data is initially presented to us in a raw format, requiring an understanding of how it was obtained and formatted. This enables us to structure the data appropriately for analysis using statistical analysis languages like R and Python, employing supervised machine learning and k-nearest neighbors to predict locations.
 
-# Variable Description Table in 3. Data section
+# Data
+## Variable Description Table in 3. Data section
 
 According to documents provided by the client, the data contains the following variables in Table 1:
 ```{r echo=FALSE, message=FALSE}
@@ -22,3 +23,5 @@ data <- data.frame(
 kbl(data, caption = "Variable Description and Types") %>%
 kable_classic(full_width = FALSE, html_font = "Cambria", font_size = 6)
 ```
+
+The information used in this analysis originates from the Community Resource for Archiving Wireless Data at Dartmouth. The offline dataset is a structured text file containing signal strength measurements collected using a handheld device at 166 points, evenly spaced 1 meter apart, situated in the hallways of a building at the University of Mannheim in Germany. The floor plan of this area is illustrated in Figure 1, with dimensions measuring 15 by 36 meters. After the cleaning process, the refined offline dataset comprises approximately 915,000 observations across nine variables. These observations represent recordings of signal strength, captured at eight orientations with 45-degree increments.
