Comments on conclusion: RE-DO THEM! They are not conclusions at all.

--- a/conclusion and reference.Rmd
+++ b/conclusion and reference.Rmd
@@ -1,8 +1,10 @@
 # Conclusion
 
-The decrease in the distribution of signal strength indicates a linear decline concerning logarithmic distance. Employing a simple triangulation method allows us to determine the precise location of the device. We investigated the distribution of signal strength across various orientations and access points, observing fluctuations in signal strength for both nearby and distant points. In the field of Indoor Positioning Systems (IPS), predictive capabilities have valuable applications across a range of industries. Stakeholders can identify impediments in movement, whether it involves a crowd at an airport, packages navigating a warehouse, or optimizing foot traffic in high-profit areas of retail establishments. Companies such as UPS, FedEx, and DHL, responsible for transporting delicate biological samples, could gain advantages from the increased utilization of Internet of Things (IoT) devices for real-time tracking. In warehouses bustling with human activity and machinery, the risk of misplacing packages persists, even with strict regulations. IPS and IoT offer a thorough record of the entire journey for sensitive packages, ensuring accountability for patients, medical facilities, shippers, and regulatory bodies.
+The decrease in the distribution of signal strength indicates a linear decline concerning logarithmic distance.
+Employing a simple triangulation method allows us to determine the precise (**NO, LOCATIONS ARE NOT PRECISE AT ALL, THEY ARE APROXIMATED, GOOD, BUT NOT PRECISE!**) location of the device. We investigated the distribution of signal strength across various orientations and access points (**THIS IS NOT A CONCLUSION**), observing fluctuations in signal strength for both nearby and distant points. In the field of Indoor Positioning Systems (IPS), predictive capabilities have valuable applications across a range of industries. Stakeholders can identify impediments in movement, whether it involves a crowd at an airport, packages navigating a warehouse, or optimizing foot traffic in high-profit areas of retail establishments (**IF YOU SAY THIS HERE, YOU NEED TO INTRODUCE IT ON THE BACKGROUND**). Companies such as UPS, FedEx, and DHL, responsible for transporting delicate biological samples, could gain advantages from the increased utilization of Internet of Things (IoT) (**AGAIN, F YOU SAY THIS YOU HAVE TO DEFINE IT SOMEWHERE!** )devices for real-time tracking. In warehouses bustling with human activity and machinery, the risk of misplacing packages persists, even with strict regulations. IPS and IoT offer a thorough record of the entire journey for sensitive packages, ensuring accountability for patients, medical facilities, shippers, and regulatory bodies.
+
+**THIS ARE NOT CONCLUSIONS, YOU ARE STATING THE PROBLEM AGAIN AND INCLUDING APPLICATIONS. A CONCLUSION IS DIRECT AND MEASURABLE AND IT INCLUDES THE FINDINGS.**
 
 # Reference
 [1] Chen, T.Q. and Guestrin, C. (2016) Xgboost: A Scalable Tree Boosting System. Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining, San Francisco, 13-17 August 2016, 785-794. https://doi.org/10.1145/2939672.2939785
-[2] Nolan, D. A., & Lang, D. T. (2015). Data science in R : a case studies approach to computational reasoning and problem solving / Deborah Nolan, University of California, Berkeley, USA, Duncan Temple Lang, University of California, Davis, USA. CRC Press.
-[3] Pros and Cons of k-NN, https://kevinzakka.github.io/2016/07/13/k-nearest-neighbor/#pros-and-cons-of-knn
+[2] Pros and Cons of k-NN, https://kevinzakka.github.io/2016/07/13/k-nearest-neighbor/#pros-and-cons-of-knn
