--- a/Introduction and Variables descrption table in 3. Data section.Rmd
+++ b/Introduction and Variables descrption table in 3. Data section.Rmd
@@ -24,5 +24,5 @@ kbl(data, caption = "Variable Description and Types") %>%
 kable_classic(full_width = FALSE, html_font = "Cambria", font_size = 6)
 ```
 
-The information used in this analysis originates from the Community Resource for Archiving Wireless Data at Dartmouth ->. The offline dataset is a structured text file containing signal strength measurements collected using a handheld device at 166 points, evenly spaced 1 meter apart, situated in the hallways of a building at the University of Mannheim in Germany. The floor plan of this area is illustrated in Figure 1, with dimensions measuring 15 by 36 meters. After the cleaning process, the refined offline dataset comprises approximately 915,000 observations across nine variables. These observations represent recordings of signal strength, captured at eight orientations with 45-degree increments.
+The offline dataset is a structured text file containing signal strength measurements collected using a handheld device at 166 points, evenly spaced 1 meter apart. The floor plan of this area is illustrated in Figure 1, with dimensions measuring 15 by 36 meters. After the cleaning process, the refined offline dataset comprises approximately 915,000 observations across nine variables. These observations represent recordings of signal strength, captured at eight orientations with 45-degree increments.
 #I wrote this part in the document, I will modify it here as well.
